Added next build step: run test suite

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -1,3 +1,4 @@
-ApplyChangesBuilder.DescriptorImpl.DisplayName=SN Apply Changes
-
+ApplyChangesBuilder.DescriptorImpl.DisplayName=SN: Apply changes
 ApplyChangesBuilder.DescriptorImpl.errors.wrongUrl=Wrong Url. Use http(s):// at the beginning of the url.
+
+RunTestSuiteBuilder.DescriptorImpl.DisplayName=SN: Run test suite
