Added next build step: run test suite with results

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -2,3 +2,4 @@ ApplyChangesBuilder.DescriptorImpl.DisplayName=SN: Apply changes
 ApplyChangesBuilder.DescriptorImpl.errors.wrongUrl=Wrong Url. Use http(s):// at the beginning of the url.
 
 RunTestSuiteBuilder.DescriptorImpl.DisplayName=SN: Run test suite
+RunTestSuiteWithResultsBuilder.DescriptorImpl.DisplayName=SN: Run test suite with results
