--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -1,5 +1,7 @@
 ApplyChangesBuilder.DescriptorImpl.DisplayName=SN: Apply changes
-ApplyChangesBuilder.DescriptorImpl.errors.wrongUrl=Wrong Url. Use http(s):// at the beginning of the url.
+ServiceNowBuilder.DescriptorImpl.errors.wrongUrl=Wrong Url. Use http(s):// at the beginning of the url.
 
 RunTestSuiteBuilder.DescriptorImpl.DisplayName=SN: Run test suite
 RunTestSuiteWithResultsBuilder.DescriptorImpl.DisplayName=SN: Run test suite with results
+
+PublishAppBuilder.DescriptorImpl.DisplayName=SN: Publish application
