Added next build steps: install app, rollback app

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -5,3 +5,7 @@ RunTestSuiteBuilder.DescriptorImpl.DisplayName=SN: Run test suite
 RunTestSuiteWithResultsBuilder.DescriptorImpl.DisplayName=SN: Run test suite with results
 
 PublishAppBuilder.DescriptorImpl.DisplayName=SN: Publish application
+
+InstallAppBuilder.DescriptorImpl.DisplayName=SN: Install application
+
+RollbackAppBuilder.DescriptorImpl.DisplayName=SN: Rollback application
