--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -8,9 +8,12 @@ PublishAppBuilder.DescriptorImpl.DisplayName=SN: Publish application
 
 InstallAppBuilder.DescriptorImpl.DisplayName=SN: Install application
 
-RollbackAppBuilder.DescriptorImpl.DisplayName=SN: Rollback application
+RollbackAppBuilder.DescriptorImpl.DisplayName=SN: Roll back application
 
 ActivatePluginBuilder.DescriptorImpl.DisplayName=SN: Activate plugin
 ActivatePluginBuilder.DescriptorImpl.errors.emptyPluginId=Plugin id cannot be empty!
 
 RollbackPluginBuilder.DescriptorImpl.DisplayName=SN: Roll back plugin
+
+
+ServiceNowParameterDefinition.DescriptorImpl.DisplayName=ServiceNow Parameters
