Tests and improvements for ServiceNow Parameter

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -17,3 +17,6 @@ RollbackPluginBuilder.DescriptorImpl.DisplayName=SN: Roll back plugin
 
 
 ServiceNowParameterDefinition.DescriptorImpl.DisplayName=ServiceNow Parameters
+
+ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForPublishedAppUrl=Wrong url for publishing instance. Use http(s):// at the beginning of the url.
+ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForInstalledAppUrl=Wrong url for installation instance. Use http(s):// at the beginning of the url.
