Validation in build steps

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -13,6 +13,7 @@ RollbackAppBuilder.DescriptorImpl.DisplayName=SN: Roll back application
 
 ActivatePluginBuilder.DescriptorImpl.DisplayName=SN: Activate plugin
 ActivatePluginBuilder.DescriptorImpl.errors.emptyPluginId=Plugin id cannot be empty!
+ActivatePluginBuilder.DescriptorImpl.errors.emptyCredentials=Credentials cannot be empty!
 
 RollbackPluginBuilder.DescriptorImpl.DisplayName=SN: Roll back plugin
 
