Added new global parameter 'Progress check interval' within ServiceNow Parameters.

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -22,3 +22,4 @@ ServiceNowParameterDefinition.DescriptorImpl.DisplayName=ServiceNow Parameters
 
 ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForPublishedAppUrl=Wrong url for publishing instance. Use http(s):// at the beginning of the url.
 ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForInstalledAppUrl=Wrong url for installation instance. Use http(s):// at the beginning of the url.
+ServiceNowParameterDefinition.DescriptorImpl.errors.progressCheckIntervalTooSmall=Progress check interval shouldn''t be lower than 100 ms.
