--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -23,3 +23,12 @@ ServiceNowParameterDefinition.DescriptorImpl.DisplayName=ServiceNow Parameters
 ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForPublishedAppUrl=Wrong url for publishing instance. Use http(s):// at the beginning of the url.
 ServiceNowParameterDefinition.DescriptorImpl.errors.wrongInstanceForInstalledAppUrl=Wrong url for installation instance. Use http(s):// at the beginning of the url.
 ServiceNowParameterDefinition.DescriptorImpl.errors.progressCheckIntervalTooSmall=Progress check interval shouldn''t be lower than 100 ms.
+
+InstanceScanBuilder.DescriptorImpl.DisplayName=SN: Instance scan
+
+
+InstanceScanBuilder.ScanType.fullScan=Full scan
+InstanceScanBuilder.ScanType.pointScan=Point scan
+InstanceScanBuilder.ScanType.scanWithCombo=Scan with combo
+InstanceScanBuilder.ScanType.scanWithSuiteOnScopedApps=Scan with suite on scoped application
+InstanceScanBuilder.ScanType.scanWithSuiteOnUpdateSets=Scan with suite on update sets
