--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -32,3 +32,7 @@ InstanceScanBuilder.ScanType.pointScan=Point scan
 InstanceScanBuilder.ScanType.scanWithCombo=Scan with combo
 InstanceScanBuilder.ScanType.scanWithSuiteOnScopedApps=Scan with suite on scoped application
 InstanceScanBuilder.ScanType.scanWithSuiteOnUpdateSets=Scan with suite on update sets
+
+BatchInstallBuilder.DescriptorImpl.DisplayName=SN: Batch install
+
+BatchRollbackBuilder.DescriptorImpl.DisplayName=SN: Batch rollback
