SNDP-80 Enhancements. Publishing and 'increment by' logic. Workaround for empty WORKSPACE in environment vars.

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -6,6 +6,7 @@ RunTestSuiteWithResultsBuilder.DescriptorImpl.DisplayName=SN: Run test suite wit
 
 PublishAppBuilder.DescriptorImpl.DisplayName=SN: Publish application
 PublishAppBuilder.DescriptorImpl.warnings.obtainVersionAutomatically=Value provided in the field ''Application version'' will be ignored!
+PublishAppBuilder.DescriptorImpl.error.incrementBy_negative=Using negative number is not allowed. Value should be equal or greater than 0!
 
 InstallAppBuilder.DescriptorImpl.DisplayName=SN: Install application
 
