SNDP-80 Added new parameter isAppCustomization to the build step snPublishApp.

--- a/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/servicenow/Messages.properties
@@ -7,6 +7,7 @@ RunTestSuiteWithResultsBuilder.DescriptorImpl.DisplayName=SN: Run test suite wit
 PublishAppBuilder.DescriptorImpl.DisplayName=SN: Publish application
 PublishAppBuilder.DescriptorImpl.warnings.obtainVersionAutomatically=Value provided in the field ''Application version'' will be ignored!
 PublishAppBuilder.DescriptorImpl.error.incrementBy_negative=Using negative number is not allowed. Value should be equal or greater than 0!
+PublishAppBuilder.DescriptorImpl.error.isAppCustom_mustHaveSysId=Customized application requires application system id!
 
 InstallAppBuilder.DescriptorImpl.DisplayName=SN: Install application
 
